--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,2 +1,7 @@
 /* For information on how to create your own theme, please refer to:
 http://ionicframework.com/docs/theming/ */
+
+:root {
+    --ion-color-primary: #3880ff;
+    --ion-color-primary-contrast: #ffffff;
+}
